<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.5">
  <POU Name="IOInstances_Cylinder" Id="{dea825d9-0c60-4581-a3a3-862e7051fe06}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM IOInstances_Cylinder
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[gCylinderCtrl[30](
	Cylinder_HMI:= gCylinderCtrl_HMI[30]  , 
	Cylinder_CMD_Itf:= gDevice_ID[30], 
	mode:= , 
	bExtend_auto:= , 
	bRetract_auto:= , 
	bExtend_jog:= , 
	bRetract_jog:= , 
	bExtend_Enable:= , 
	bRetract_Enable:= , 
	bAbort_Enable:= , 
	bExtend_Prox:= , 
	bRetract_Prox:= , 
	bReset_Error:= , 
	tTimeOut:= , 
	bExtend_Work=> , 
	bRetract_Work=> , 
	done=> , 
	busy=> , 
	error=> , 
	errorID=> , 
	errorTXT=> , 
	doneCNT=> , 
	errorCNT=> , 
	nStatus=>gDevice_ID[30].Statue.STATUE );]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>